--- a/Todo.html
+++ b/Todo.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>jQuery1</title>
     <link href="CSS/Todo.css" rel="stylesheet" />
-    <script type="text/javascript" src="C:\Users\User\jQuery-Todo-App\JS\lib\jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="JS/lib/jquery-3.3.1.min.js"></script>
 </head>
 
 <body>
