--- a/Todo.html
+++ b/Todo.html
@@ -3,13 +3,22 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>jQuery1</title>
+    <title>jQuery Todo App</title>
     <link href="CSS/Todo.css" rel="stylesheet" />
     <script type="text/javascript" src="JS/lib/jquery-3.3.1.min.js"></script>
 </head>
 
 <body>
-    
+    <div id="container">
+        <h1>To-Do List</h1>
+        <input type="text">
+        <ul>
+            <li><span>X </span>learn-podcasts</li>
+            <li><span>X </span>test-skill challenges</li>
+            <li><span>X </span>focus-network</li>
+        </ul>
+    </div>
+
 
 
     <script type="text/javascript" src="JS/jQuery.js"></script>
