--- a/Todo.html
+++ b/Todo.html
@@ -6,12 +6,14 @@
     <title>jQuery Todo App</title>
     <link href="CSS/Todo.css" rel="stylesheet" />
     <script type="text/javascript" src="JS/lib/jquery-3.3.1.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
 </head>
 
 <body>
     <div id="container">
         <h1>To-Do List</h1>
-        <input type="text">
+        <input type="text" placeholder="ADD TO DO">
         <ul>
             <li><span>X </span>learn-podcasts</li>
             <li><span>X </span>test-skill challenges</li>
