--- a/Todo.html
+++ b/Todo.html
@@ -7,17 +7,18 @@
     <link href="CSS/Todo.css" rel="stylesheet" />
     <script type="text/javascript" src="JS/lib/jquery-3.3.1.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
 </head>
 
 <body>
     <div id="container">
-        <h1>To-Do List</h1>
+        <h1>To-Do List<span id="toggle-form"><i class="fas fa-plus"></i></span></h1>
         <input type="text" placeholder="ADD TO DO">
         <ul>
-            <li><span>X </span>learn-podcasts</li>
-            <li><span>X </span>test-skill challenges</li>
-            <li><span>X </span>focus-network</li>
+            <li><span><i class="fas fa-trash"></i></span> learn-podcasts</li>
+            <li><span><i class="fas fa-trash"></i></span> test-skill challenges</li>
+            <li><span><i class="fas fa-trash"></i></span> focus-network</li>
         </ul>
     </div>
 
